test_regress/t/t_pp_defparen_bad.out
%Error: t/t_pp_defparen_bad.v:10:2: Illegal text before '(' that starts define arguments
 ( 1,2)
 ^
%Error: t/t_pp_defparen_bad.v:10:2: syntax error, unexpected '('
((val  1) + (2))
 ^
%Error: Exiting due to
