test_regress/t/t_pp_defparen_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2020 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0

`define test(a1,a2) ((a1) + (a2))

`test val
 ( 1,2)
